@@ -34,10 +34,12 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
 
+import org.hisp.dhis.analytics.AnalyticsExportSettings;
 import org.hisp.dhis.analytics.AnalyticsTable;
 import org.hisp.dhis.analytics.AnalyticsTableHookService;
 import org.hisp.dhis.analytics.AnalyticsTableManager;
@@ -65,9 +67,6 @@ import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import org.springframework.jdbc.core.JdbcTemplate;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-
 /**
  * @author Lars Helge Overland
  */
@@ -81,6 +80,9 @@ class JdbcAnalyticsTableManagerTest
     @Mock
     private JdbcTemplate jdbcTemplate;
 
+    @Mock
+    private AnalyticsExportSettings analyticsExportSettings;
+
     private AnalyticsTableManager subject;
 
     @BeforeEach
@@ -90,14 +92,14 @@ class JdbcAnalyticsTableManagerTest
             mock( OrganisationUnitService.class ),
             mock( CategoryService.class ), systemSettingManager, mock( DataApprovalLevelService.class ),
             mock( ResourceTableService.class ), mock( AnalyticsTableHookService.class ), mock( StatementBuilder.class ),
-            mock( PartitionManager.class ), mock( DatabaseInfo.class ), jdbcTemplate );
+            mock( PartitionManager.class ), mock( DatabaseInfo.class ), jdbcTemplate, analyticsExportSettings );
     }
 
     @Test
     void testGetRegularAnalyticsTable()
     {
         Date startTime = new DateTime( 2019, 3, 1, 10, 0 ).toDate();
-        List<Integer> dataYears = Lists.newArrayList( 2018, 2019 );
+        List<Integer> dataYears = List.of( 2018, 2019 );
 
         AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder()
             .withStartTime( startTime )
@@ -142,8 +144,8 @@ class JdbcAnalyticsTableManagerTest
             .withLatestPartition()
             .build();
 
-        List<Map<String, Object>> queryResp = Lists.newArrayList();
-        queryResp.add( ImmutableMap.of( "dataelementid", 1 ) );
+        List<Map<String, Object>> queryResp = new ArrayList<>();
+        queryResp.add( Map.of( "dataelementid", 1 ) );
 
         when( systemSettingManager.getDateSetting( SettingKey.LAST_SUCCESSFUL_ANALYTICS_TABLES_UPDATE ) )
             .thenReturn( lastFullTableUpdate );
