@@ -27,8 +27,6 @@
  */
 package org.hisp.dhis.system;
 
-import static com.google.common.base.Preconditions.checkNotNull;
-
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
@@ -38,6 +36,7 @@ import java.util.List;
 import java.util.Properties;
 import java.util.TimeZone;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
 import org.apache.commons.lang3.StringUtils;
@@ -61,12 +60,11 @@ import org.springframework.core.io.ClassPathResource;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.google.common.collect.ImmutableList;
-
 /**
  * @author Lars Helge Overland
  */
 @Slf4j
+@RequiredArgsConstructor
 @Service( "org.hisp.dhis.system.SystemService" )
 public class DefaultSystemService
     implements SystemService, InitializingBean
@@ -83,25 +81,6 @@ public class DefaultSystemService
 
     private final SystemSettingManager systemSettingManager;
 
-    public DefaultSystemService( LocationManager locationManager, DatabaseInfo databaseInfo,
-        ConfigurationService configurationService, DhisConfigurationProvider dhisConfig,
-        CalendarService calendarService, SystemSettingManager systemSettingManager )
-    {
-        checkNotNull( locationManager );
-        checkNotNull( databaseInfo );
-        checkNotNull( configurationService );
-        checkNotNull( dhisConfig );
-        checkNotNull( calendarService );
-        checkNotNull( systemSettingManager );
-
-        this.locationManager = locationManager;
-        this.databaseInfo = databaseInfo;
-        this.configurationService = configurationService;
-        this.dhisConfig = dhisConfig;
-        this.calendarService = calendarService;
-        this.systemSettingManager = systemSettingManager;
-    }
-
     /**
      * Variable holding fixed system info state.
      */
@@ -112,7 +91,7 @@ public class DefaultSystemService
     {
         systemInfo = getFixedSystemInfo();
 
-        List<String> info = ImmutableList.of(
+        List<String> info = List.of(
             "DHIS 2 Version: " + systemInfo.getVersion(),
             "Revision: " + systemInfo.getRevision(),
             "Build date: " + systemInfo.getBuildTime(),
@@ -281,6 +260,11 @@ public class DefaultSystemService
             {
                 // Do nothing
             }
+        }
+        else
+        {
+            log.error( "build.properties is not available in the classpath. " +
+                "Make sure you build the project with Maven before you start the embedded Jetty server." );
         }
 
         return info;
