@@ -32,22 +32,18 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import lombok.RequiredArgsConstructor;
+
 import org.hisp.dhis.cache.Cache;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.programrule.ProgramRule;
 import org.hisp.dhis.programrule.ProgramRuleActionType;
 import org.hisp.dhis.programrule.ProgramRuleService;
 
-import com.google.common.collect.ImmutableList;
-
+@RequiredArgsConstructor
 abstract class ImplementableRuleService
 {
     private final ProgramRuleService programRuleService;
-
-    public ImplementableRuleService( ProgramRuleService programRuleService )
-    {
-        this.programRuleService = programRuleService;
-    }
 
     abstract List<ProgramRule> getProgramRulesByActionTypes( Program program, String programStageUid );
 
@@ -73,13 +69,13 @@ abstract class ImplementableRuleService
 
         if ( optionalCacheValue.isPresent() && Boolean.FALSE.equals( optionalCacheValue.get() ) )
         {
-            return ImmutableList.of();
+            return List.of();
         }
 
         List<ProgramRule> programRulesByActionTypes = getProgramRulesByActionTypes( program, programStageUid );
 
         if ( programStageUid == null ) // To populate programHasRulesCache at
-                                       // enrollment
+                                      // enrollment
         {
             getProgramHasRulesCache().put( program.getUid(), !programRulesByActionTypes.isEmpty() );
 
@@ -88,7 +84,7 @@ abstract class ImplementableRuleService
             return programRulesByActionTypes.stream().filter( rule -> rule.getProgramStage() == null )
                 .collect( Collectors.toList() );
         }
+
         return programRulesByActionTypes;
     }
-
 }
